--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/pixi.js": "^4.8.6",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -26,7 +25,5 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
-  "dependencies": {
-    "pixi.js": "^5.0.0-rc.2"
-  }
+  "dependencies": {}
 }
