--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,8 +3,11 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es6",
+    "noImplicitThis": true,
+    "strict": true,
+    "module": "commonjs",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": ["./pixi"]
   }
 }
