--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "typeRoots": ["./pixi"]
+    "typeRoots": ["./pixi"],
+    "lib": ["es7", "dom"]
   }
 }
