--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "rm -rf ./dist && webpack && cp ./pixi/pixi.js ./src/casino.html ./src/index.html ./src/city.html ./dist",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server"
   },
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.4.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
