--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && webpack && cp -r ./src/assets/ ./pixi/pixi.js ./src/casino.html ./src/index.html ./src/city.html ./dist",
+    "build": "node build.js && webpack",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server"
   },
@@ -31,5 +31,7 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fs-extra": "^7.0.1"
+  }
 }
